// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`grid-range-size Renders \`grid-range-size\` with custom props 1`] = `
<div
  class="v-list__group"
>
  <div
    class="v-list__group__header"
  >
    <div
      role="listitem"
    >
      <div
        class="v-list__tile theme--light"
      >
        <div>
          Custom title
        </div>
      </div>
    </div>
    <div
      class="v-list__group__header__append-icon"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light"
      >
        keyboard_arrow_down
      </i>
    </div>
  </div>
  <transition-stub
    mode="in-out"
    name="expand-transition"
  >
    <div
      class="v-list__group__items"
      style="display: none;"
    >
      <div
        class="container"
      >
        <input
          always-dirty="always-dirty"
          class="v-range-slider mt-3"
          hide-details="hide-details"
          max="10"
          min="2"
          step="2"
          thumb-label="thumb-label"
          ticks="always"
        />
      </div>
    </div>
  </transition-stub>
</div>
`;

exports[`grid-range-size Renders \`grid-range-size\` with default and required props 1`] = `
<div
  class="v-list__group"
>
  <div
    class="v-list__group__header"
  >
    <div
      role="listitem"
    >
      <div
        class="v-list__tile theme--light"
      >
        <div>
          
        </div>
      </div>
    </div>
    <div
      class="v-list__group__header__append-icon"
    >
      <i
        aria-hidden="true"
        class="v-icon material-icons theme--light"
      >
        keyboard_arrow_down
      </i>
    </div>
  </div>
  <transition-stub
    mode="in-out"
    name="expand-transition"
  >
    <div
      class="v-list__group__items"
      style="display: none;"
    >
      <div
        class="container"
      >
        <input
          always-dirty="always-dirty"
          class="v-range-slider mt-3"
          hide-details="hide-details"
          max="12"
          min="0"
          step="1"
          thumb-label="thumb-label"
          ticks="always"
        />
      </div>
    </div>
  </transition-stub>
</div>
`;
